--- a/app/front/app/views/home/padrao.ejs
+++ b/app/front/app/views/home/padrao.ejs
@@ -28,6 +28,32 @@
 					return false;
 				});
 
+				$('#btn-publicar').click(function(){
+					//criar form data
+					var formData = new FormData();
+					var arquivo = document.getElementById("arquivo").files[0];
+					var titulo = document.getElementById("titulo").value;
+
+					formData.append("arquivo", arquivo);
+					formData.append("titulo",titulo);
+
+					//criar xmlhttprequest
+					var xhr = newXMLHttpRequest();
+					//mudança de estado
+					xhr.onreadystatechange = function() {
+						if(xhr.readyState=4)
+						{
+							var resposta =xhr.responseText;
+							document.getElementById('mensagem').innerHTML =resposta;
+						}
+					}
+
+					//fazendo envio request
+					xhr.open("POST","http://localhost/api");
+					xhr.send(formData);
+
+				});
+
 			});
 		</script>
 
