--- a/app/front/app/views/home/padrao.ejs
+++ b/app/front/app/views/home/padrao.ejs
@@ -16,7 +16,31 @@
 
 		<script>
 			$(document).ready(function(){
+				function carrega_postagens(){
+					var xhr = new XMLHttpRequest;
+					xhr.open("GET","httP://localhost:82/api");
+					xhr.onload = function(){
+						if(xhr.status === 200){
+							var data = $.parseJSON(xhr.responseText);
+							for(i=0; i<data.length; i++)
+							{
+								$('#container_timeline').append(
+									'<div class="publicacao">'+
+									'<span class="titulo">'+
+									data[i].titulo + "<br>"
+									+'</span>'+
+									'<img src="http://localhost:82/uploads/' + data[i].url_imagem+'"/>'
+									+'</div>'
+								);
+								
+							}
+							console.log(data);
+						}
+					}
+					xhr.send();
 
+				}
+				carrega_postagens();
 				$('#btn_incluir').click(function(){
 					$('#container_timeline').hide();
 					$('#container_form').show();
@@ -38,7 +62,7 @@
 					formData.append("titulo",titulo);
 
 					//criar xmlhttprequest
-					var xhr = newXMLHttpRequest();
+					var xhr = new XMLHttpRequest();
 					//mudança de estado
 					xhr.onreadystatechange = function() {
 						if(xhr.readyState=4)
@@ -49,7 +73,7 @@
 					}
 
 					//fazendo envio request
-					xhr.open("POST","http://localhost/api");
+					xhr.open("POST","http://localhost:82/api");
 					xhr.send(formData);
 
 				});
